--- a/.github/workflows/label.yml
+++ b/.github/workflows/label.yml
@@ -16,4 +16,4 @@ jobs:
     steps:
     - uses: actions/labeler@v2
       with:
-        repo-token: "${{ secrets.LABEL }}"
+        repo-token: ${{ secrets.LABEL }}
