--- a/.github/workflows/label.yml
+++ b/.github/workflows/label.yml
@@ -6,8 +6,7 @@
 # https://github.com/actions/labeler
 
 name: Labeler
-on: pull_request_target
-    types: [assigned, opened, synchronize, reopened]
+on: [pull_request]
 
 jobs:
   label:
@@ -17,4 +16,4 @@ jobs:
     steps:
     - uses: actions/labeler@v2
       with:
-        repo-token: ${{ secrets.LABEL }}
+        repo-token: "${{ secrets.GITHUB_TOKEN }}"
